# routes/web.php
@@ -4,12 +4,18 @@ use App\Http\Controllers\CategoryController;
 use App\Http\Controllers\ProductController;
 use Illuminate\Support\Facades\Route;
 
-Route::get('/categories', [CategoryController::class, 'getAllCategories']);
-Route::put('/categories/{id}', [CategoryController::class, 'updateCategory']);
-Route::delete('/categories/{id}', [CategoryController::class, 'deleteCategory']);
-Route::get('/categories/{id}/products', [CategoryController::class, 'getCategoryProducts']);
-Route::get('/categories/{id}/products/export', [CategoryController::class, 'exportCategoryProducts']);
+Route::prefix('api/v1')->group(function () {
+    Route::prefix('categories')->group(function () {
+        Route::get('/', [CategoryController::class, 'getAllCategories']);
+        Route::put('/{id}', [CategoryController::class, 'updateCategory']);
+        Route::delete('/{id}', [CategoryController::class, 'deleteCategory']);
+        Route::get('/{id}/products', [CategoryController::class, 'getCategoryProducts']);
+        Route::get('/{id}/products/export', [CategoryController::class, 'exportCategoryProducts']);
+    });
 
-Route::get('/products', [ProductController::class, 'getAllProducts']);
-Route::put('products/{id}', [ProductController::class, 'updateProduct']);
-Route::delete('products/{id}', [ProductController::class, 'deleteProduct']);
+    Route::prefix('products')->group(function () {
+        Route::get('/', [ProductController::class, 'getAllProducts']);
+        Route::put('/{id}', [ProductController::class, 'updateProduct']);
+        Route::delete('/{id}', [ProductController::class, 'deleteProduct']);
+    });
+});
